# oz_code

A.javascript study/1회차/: 02-자바스크립트소개.html  03-자바스크립트작동원리-출력해보기.html  04-콘손출력-자료형.html  user.html  (+6 more)
B.python/: ch16.ipynb  ch21.ipynb  ch25.ipynb  ch27.ipynb  ch31.ipynb  ch35.ipynb  Untitled  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb  ch12.ipynb  ch13.ipynb  ch14.ipynb  ch15.ipynb  ch17.ipynb  ch18.ipynb  ch19.ipynb  ch20.ipynb  ch22.ipynb  ch23.ipynb  ch24.ipynb  ch26.ipynb  ch28.ipynb  ch29.ipynb  ch30.ipynb  ch32.ipynb  ch33.ipynb  ch34.ipynb  ch36.ipynb  ch37.ipynb  ch39.ipynb  python_test.ipynb
C.oz_git/: oz_fullstack.yaml  oz_service.yaml
D.database/: data_generate.py
F.linux/: linux_0113(문제).ipynb  linux_0113(정답).ipynb
G.aws/: locustfile.py
H.webscrab/: coupang.py  coupang1.py
I.Django/oz/blog/: .python-version  db.sqlite3  pyproject.toml
I.Django/oz/blog/blog/: admin.py  forms.py  models.py  views.py
I.Django/oz/blog/blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py
I.Django/oz/blog/config/: settings.py  urls.py
I.Django/oz/blog/member/: views.py
I.Django/oz/blog/templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_list.html  blog_update.html
I.Django/oz/blog/templates/registration/: login.html  signup.html
연습/psychological_test_basic/: pyproject.toml
연습/psychological_test_basic/app/: __init__.py  models.py  routes.py
연습/psychological_test_basic/app/templates/: question.html  results.html
코딩테스트/: 1차원 배열.py  1차원 배열1.py
(+63 files in other folders)
